# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- O rpg voltou

### Removed

- Plurais foram removidos (Não tava conseguindo arrumar ai tirei, é us guri)

## [3.5.10] - 21-01-2022

### Added

- Os dados de jogos agora são armazenados para um futuro top

### Fixed

- Jogo do bicho possuia uma instância por shard

## [3.5.9] - 19-01-2022

### Added

- ROLETA!! Sabe o jogo de azar da roleta? A Menhera agora tem ele! Teste agora mesmo com `/roleta`
- JOGO DO BICHO!! Vocês devem conhecer o jogo do bicho, né? Na Menhera, a cada 5 horas será sorteado um novo jogo do bicho! Usuários podem se juntar à essa aposta usando `/bicho`

## [3.5.8] - 17-01-2022

### Added

- PreviewMode: Usuários podem ter uma preview de temas antes de os comprar no `/loja comprar temas`

### Fixed

- Total anjos caçados aparece no `/status cacar`

## [3.5.7] - 13-01-2022

### Added

- Comandos de economia agora tem um limite mínimo e máximo de valores predefinido

### Fixed

- O comando `/inventário` voltou a funcionar

## [3.5.6] - 12-04-2021

### Added

- Novo tema de perfil! **Guerreiro Aposentado**. Criado por Relkhin#4842 (853341889016365097)
- Usuários podem criar temas! Etes usuários recebem uma participação de lucros dos seus temas vendidos!
- Novo Comando! `/status design`. Com este comando é possivel ver as informações de algum designer, como a quantidade de vendas e o lucro!

### Fixed

- Título do embed de máximo de prêmios ao votar

## [3.5.5] 11-30-2021

### Added
