@@ -12,6 +12,7 @@
   "description": "Descrição",
   "amount": "Quantidade",
   "next": "Próxima",
+  "soon": "Em Breve",
   "back": "Anterior",
   "demons": "Demônios",
   "angels": "Anjos",
