@@ -1,5 +1,20 @@
 {
   "1": {
-    "name": "Cajado Tri"
+    "name": "Pele Podre"
+  },
+  "2": {
+    "name": "Cristal Wigz"
+  },
+  "3": {
+    "name": "Priton"
+  },
+  "4": {
+    "name": "Obsidiana Vermelha"
+  },
+  "5": {
+    "name": "Moeda Antiga"
+  },
+  "6": {
+    "name": "Ouro Amaldiçoado"
   }
 }
