@@ -74,30 +74,212 @@ const Enemies: { [id: number]: EnemiesFile } = {
     ],
   },
   3: {
-    dungeonLevels: [3, 4, 5, 6, 7, 8, 9, 10],
-    baseDamage: 50,
+    dungeonLevels: [1],
+    baseDamage: 6,
     baseLife: 150,
     experience: 40,
-    baseArmor: 10,
+    baseArmor: 9,
     perLevel: {
-      baseDamage: 10,
-      baseLife: 20,
-      baseArmor: 2,
+      baseDamage: 4,
+      baseLife: 2,
+      baseArmor: 23,
       experience: 6,
     },
     loots: [
       {
         probability: 95,
         loots: [
-          { id: 4, level: 1 },
+          { id: 2, level: 1 },
           { id: 3, level: 1 },
         ],
       },
       {
         probability: 5,
         loots: [
+          { id: 1, level: 1 },
+          { id: 2, level: 1 },
+        ],
+      },
+    ],
+  },
+  4: {
+    dungeonLevels: [3],
+    baseDamage: 30,
+    baseLife: 200,
+    experience: 50,
+    baseArmor: 10,
+    perLevel: {
+      baseDamage: 4,
+      baseLife: 30,
+      baseArmor: 6,
+      experience: 6,
+    },
+    loots: [
+      {
+        probability: 50,
+        loots: [
+          { id: 5, level: 1 },
+          { id: 2, level: 1 },
+        ],
+      },
+      {
+        probability: 45,
+        loots: [
+          { id: 3, level: 1 },
+          { id: 2, level: 1 },
+          { id: 1, level: 1 },
+        ],
+      },
+      {
+        probability: 5,
+        loots: [
+          { id: 4, level: 1 },
+          { id: 1, level: 1 },
+          { id: 1, level: 1 },
+        ],
+      },
+    ],
+  },
+  5: {
+    dungeonLevels: [3, 4],
+    baseDamage: 40,
+    baseLife: 130,
+    experience: 52,
+    baseArmor: 10,
+    perLevel: {
+      baseDamage: 6,
+      baseLife: 10,
+      baseArmor: 10,
+      experience: 7,
+    },
+    loots: [
+      {
+        probability: 50,
+        loots: [
+          { id: 4, level: 1 },
+          { id: 3, level: 1 },
+        ],
+      },
+      {
+        probability: 45,
+        loots: [
+          { id: 3, level: 1 },
           { id: 4, level: 1 },
           { id: 4, level: 1 },
+        ],
+      },
+      {
+        probability: 5,
+        loots: [
+          { id: 5, level: 1 },
+          { id: 5, level: 1 },
+          { id: 2, level: 1 },
+        ],
+      },
+    ],
+  },
+  6: {
+    dungeonLevels: [4],
+    baseDamage: 40,
+    baseLife: 300,
+    experience: 100,
+    baseArmor: 30,
+    perLevel: {
+      baseDamage: 3,
+      baseLife: 4,
+      baseArmor: 1,
+      experience: 3.5,
+    },
+    loots: [
+      {
+        probability: 99,
+        loots: [
+          { id: 4, level: 1 },
+          { id: 5, level: 1 },
+        ],
+      },
+      {
+        probability: 1,
+        loots: [
+          { id: 5, level: 1 },
+          { id: 5, level: 1 },
+          { id: 5, level: 1 },
+        ],
+      },
+    ],
+  },
+  7: {
+    dungeonLevels: [4, 5],
+    baseDamage: 10,
+    baseLife: 800,
+    experience: 60,
+    baseArmor: 40,
+    perLevel: {
+      baseDamage: 2,
+      baseLife: 10,
+      baseArmor: 2,
+      experience: 10,
+    },
+    loots: [
+      {
+        probability: 50,
+        loots: [
+          { id: 2, level: 1 },
+          { id: 4, level: 1 },
+        ],
+      },
+      {
+        probability: 48,
+        loots: [
+          { id: 5, level: 1 },
+          { id: 3, level: 1 },
+          { id: 1, level: 2 },
+        ],
+      },
+      {
+        probability: 2,
+        loots: [
+          { id: 2, level: 2 },
+          { id: 5, level: 1 },
+          { id: 1, level: 2 },
+        ],
+      },
+    ],
+  },
+  8: {
+    dungeonLevels: [5],
+    baseDamage: 60,
+    baseLife: 100,
+    experience: 10,
+    baseArmor: 40,
+    perLevel: {
+      baseDamage: 7,
+      baseLife: 10,
+      baseArmor: 7,
+      experience: 11,
+    },
+    loots: [
+      {
+        probability: 100,
+        loots: [
+          { id: 6, level: 1 },
+          { id: 3, level: 2 },
+        ],
+      },
+      {
+        probability: 99,
+        loots: [
+          { id: 6, level: 1 },
+          { id: 6, level: 1 },
+          { id: 4, level: 2 },
+        ],
+      },
+      {
+        probability: 1,
+        loots: [
+          { id: 1, level: 1 },
+          { id: 1, level: 1 },
+          { id: 1, level: 1 },
         ],
       },
     ],
